--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
     "mocha": "^8.3.2"
   },
   "standard": {
-    "globals": ["describe", "it"]
+    "globals": [
+      "describe",
+      "it"
+    ]
+  },
+  "dependencies": {
+    "ipfs": "^0.54.4",
+    "ipfs-http-client": "^49.0.4",
+    "orbit-db": "^0.26.1"
   }
 }
