--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "ipfs": "^0.54.4",
     "ipfs-http-client": "^49.0.4",
-    "orbit-db": "^0.26.1"
+    "orbit-db": "^0.26.1",
+    "ramda": "^0.27.1",
+    "uuid": "^8.3.2"
   }
 }
